--- a/project.properties
+++ b/project.properties
@@ -12,4 +12,4 @@ proguard.config=${sdk.dir}/tools/proguard/proguard-android.txt:android_common_pr
 
 # Project target.
 target=android-19
-android.library=true
+android.library=false
