Add GreenBot EventBus

--- a/assets/crashlytics-build.properties
+++ b/assets/crashlytics-build.properties
@@ -3,9 +3,9 @@
 #
 #Do NOT modify, delete, or commit to source control!
 #
-#Wed Jul 23 09:39:57 CST 2014
+#Mon Nov 10 10:26:01 GMT+08:00 2014
 version_name=1.0
 package_name=com.faip.androidcommonutils
-build_id=27a8b4e2-15f3-4145-b6b6-f3c4143458c4
+build_id=b3a57b65-f323-4491-93d2-c1f86ad72ba8
 version_code=1
 app_name=AndroidCommonUtil
