--- a/build.gradle
+++ b/build.gradle
@@ -1,14 +1,15 @@
-// 有这一段，才会在maven中心下载需要的依赖库
+// 从maven库中下载编译脚步
 buildscript {
     repositories {
         mavenCentral()
     }
 
     dependencies {
-        classpath 'com.android.tools.build:gradle:1.2.3'
+        classpath 'com.android.tools.build:gradle:1.3.0'
     }
 }
 
+// 有这一段，才会在maven中心下载需要的依赖库
 repositories {
     mavenCentral()
 }
@@ -28,8 +29,11 @@ android {
     // 这个并不是SDK的版本号
     buildToolsVersion "22.0.1"
 
-    sourceSets {
+    defaultConfig {
+        minSdkVersion 7
+    }
 
+    sourceSets {
         main {
             manifest.srcFile 'AndroidManifest.xml'
             java.srcDirs = ['src']
