--- a/settings.gradle
+++ b/settings.gradle
@@ -3,3 +3,9 @@
 // 这表示，我们有个产品A，包括以下几个组件core，web，mobile 每个子项目都是独立的，分别管理自己的构建。
 // 一般core组件对应A/core目录，web组件对应A/web目录，mobile组件对应A/mobile目录。接下来，我们就可以在每个组件内部，定义build.gradle负责管理当前组件的构建。
 
+// 这里声明有什么项目，然后项目的相对路径是什么
+//project(':Demo').projectDir = new File('MidasOutwardSamples/WFBaidu/BDGameSDK_LibProject')
+
+// 这里是把这个module加入到gradle工程里头
+//include ':Demo'
+
