--- a/settings.gradle
+++ b/settings.gradle
@@ -9,3 +9,10 @@
 // 这里是把这个module加入到gradle工程里头
 //include ':Demo'
 
+//// 添加自定义路径的Module这样添加
+//include ':WFOppoNoMSDK-MidasOppoSDK', ':WFOppoNoMSDK-Demo', ':WFOppoNoMSDK-OppoPaymentSDK'
+//project(':WFOppoNoMSDK-MidasOppoSDK').projectDir = new File('MidasOutwardSamples/WFOppoNoMSDK/WFOppoNoMSDK-MidasOppoSDK')
+//project(':WFOppoNoMSDK-Demo').projectDir = new File('MidasOutwardSamples/WFOppoNoMSDK/WFOppoNoMSDK-Demo')
+//project(':WFOppoNoMSDK-OppoPaymentSDK').projectDir = new File('MidasOutwardSamples/WFOppoNoMSDK/WFOppoNoMSDK-OppoPaymentSDK')
+// 这个自定义路径甚至是可以其他盘里的路径
+//project(':WFOppoNoMSDK-OppoPaymentSDK').projectDir = new File('C:\\A1w0n-Android-Projects\\MidasTVPayProject\\MidasPayTVSample')
