--- a/build.gradle
+++ b/build.gradle
@@ -1,31 +1,23 @@
-// 有这一段，才会在maven中心下载需要的依赖库
 buildscript {
-
     repositories {
         mavenCentral()
     }
-
     dependencies {
-        classpath 'com.android.tools.build:gradle:0.13.+'
+        classpath 'com.android.tools.build:gradle:1.0.0'
     }
 }
 
-repositories {
-    mavenCentral()
+apply plugin: 'android-library'
+
+dependencies {
+    compile fileTree(dir: 'libs', include: '*.jar')
 }
 
-// 表明这个是一个Library项目
-apply plugin: 'com.android.library'
-
 android {
-
     compileSdkVersion 19
-    // 这个版本号，参考SDK目录中的对应文件夹
-    // 这个并不是SDK的版本号
-    buildToolsVersion "20"
+    buildToolsVersion "21.1.1"
 
     sourceSets {
-
         main {
             manifest.srcFile 'AndroidManifest.xml'
             java.srcDirs = ['src']
@@ -34,14 +26,33 @@ android {
             renderscript.srcDirs = ['src']
             res.srcDirs = ['res']
             assets.srcDirs = ['assets']
+            jniLibs.srcDirs = ['libs']
         }
 
+        // Move the tests to tests/java, tests/res, etc...
+        instrumentTest.setRoot('tests')
+
+        // Move the build types to build-types/<type>
+        // For instance, build-types/debug/java, build-types/debug/AndroidManifest.xml, ...
+        // This moves them out of them default location under src/<type>/... which would
+        // conflict with src/ being used by the main source set.
+        // Adding new build types or product flavors should be accompanied
+        // by a similar customization.
+        debug.setRoot('build-types/debug')
+        release.setRoot('build-types/release')
+    }
+
+    packagingOptions {
+        exclude 'META-INF/DEPENDENCIES.txt'
+        exclude 'META-INF/LICENSE.txt'
+        exclude 'META-INF/NOTICE.txt'
+        exclude 'META-INF/NOTICE'
+        exclude 'META-INF/LICENSE'
+        exclude 'META-INF/DEPENDENCIES'
+        exclude 'META-INF/notice.txt'
+        exclude 'META-INF/license.txt'
+        exclude 'META-INF/dependencies.txt'
+        exclude 'META-INF/LGPL2.1'
     }
 }
 
-dependencies {
-
-    //compile group: 'com.google.caliper', name: 'caliper', version: '1.0-beta-1'
-
-    compile fileTree(dir: 'libs', include: ['*.jar'])
-}
